fixed recurring z-index issue

--- a/client/src/components/home-hero/home-hero.styles.css
+++ b/client/src/components/home-hero/home-hero.styles.css
@@ -60,7 +60,7 @@
   top: 80%;
   bottom: 0;
   right: 75%;
-  z-index: 999;
+  z-index: 997;
   text-shadow: 0 0 5px rgb(118, 118, 118);
 }
 
@@ -76,7 +76,7 @@
   bottom: 0;
   right: 0;
   margin: auto;
-  z-index: 997;
+  z-index: 996;
 }
 
 @media screen and (max-width: 768px) {
