--- a/client/src/components/navigation/navigation.styles.css
+++ b/client/src/components/navigation/navigation.styles.css
@@ -5,7 +5,7 @@
   position: sticky;
   top: 0;
   margin-right: 0px !important;
-  z-index: 998;
+  z-index: 999;
 }
 
 .nav-item a {
