--- a/client/src/components/payment-form/payment-form.styles.css
+++ b/client/src/components/payment-form/payment-form.styles.css
@@ -5,3 +5,7 @@
   align-items: center;
   justify-content: center;
 }
+
+.btn {
+  margin-left: 50% !important;
+}
